--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,1 +1,26 @@
+cmake_minimum_required(VERSION 3.13)
+set(LibName utils_misccpp)
+project(${LibName})
 
+#if building standalone and not specified build tests
+option(BUILD_TESTS "Whether to build tests" ON)
+include(FetchContent)
+FetchContent_Declare( al2o3 GIT_REPOSITORY https://github.com/DeanoC/al2o3 GIT_TAG master )
+FetchContent_GetProperties(al2o3)
+if(NOT al2o3_POPULATED)
+	FetchContent_Populate(al2o3)
+	add_subdirectory(${al2o3_SOURCE_DIR} ${al2o3_BINARY_DIR})
+endif()
+
+set(Interface
+		compiletimehash.hpp
+		)
+
+set(Src
+		)
+
+set(Deps
+		al2o3_platform
+		al2o3_tinystl
+		)
+ADD_LIB(${LibName} "${Interface}" "${Src}" "${Deps}")
